--- a/index.css
+++ b/index.css
@@ -19,16 +19,16 @@ a {
 a:hover {
   text-decoration: none;
 }
-header {
+body > header {
   padding: 1em;
   display: flex;
   align-items: center;
 }
-header h1,
-header p {
+body > header h1,
+body > header p {
   margin: 0;
 }
-header p {
+body > header p {
   margin-left: 1em;
 }
 main {
@@ -62,9 +62,11 @@ main button {
   flex-flow: column;
   box-shadow: 0 0 20px rgba(0,0,0,0.2);
 }
-.dialog label,
-.dialog input,
-.dialog select,
+.dialog header {
+  text-transform: uppercase;
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
 .dialog .group {
   margin-bottom: 0.5em;
 }
@@ -77,6 +79,7 @@ main button {
   display: flex;
   justify-content: flex-end;
 }
-.dialog .buttons button {
+.dialog .buttons > button,
+.dialog .buttons > .button-strip {
   margin-left: 5px;
 }
