Update to TypeScript 2.0

--- a/src/index.styl
+++ b/src/index.styl
@@ -64,7 +64,7 @@ main {
 
   .group { margin-bottom: 0.5em; }
 
-  input, select, textarea { padding: 0.125em 0.25em; }
+  input, select { padding: 0.125em 0.25em; }
 
   .buttons {
     display: flex;
