--- a/src/index.styl
+++ b/src/index.styl
@@ -29,11 +29,11 @@ main {
   background-color: #fff;
   border: 1px solid #888;
   flex: 1;
-  margin: 0 1em;
+  margin: 0 1em 1em 1em;
   padding 1em;
   overflow-y: auto;
   
-  button { margin-right: 2em; }
+  button { margin-right: 1em; }
 }
 
 .dialog {
