Add new checkboxLabel option to ConfirmDialog to require a checkbox be ticked before validating

--- a/src/index.styl
+++ b/src/index.styl
@@ -63,6 +63,7 @@ main {
   }
 
   .group { margin-bottom: 0.5em; }
+  .checkbox { display: flex; background: #eee; padding: 0.5em; }
 
   input, select { padding: 0.125em 0.25em; }
 
